GitHub bug: Avoid overflow caused by the diff signs

--- a/source/features/github-bugs.css
+++ b/source/features/github-bugs.css
@@ -54,3 +54,8 @@
 :root .CheckStep-line .CheckStep-line-content {
 	overflow: hidden;
 }
+
+/* Avoid overflow caused by the diff signs #5468 */
+.blob-code-marker::before {
+	top: 0;
+}
